--- a/springboot_11-12/untitled/build.gradle
+++ b/springboot_11-12/untitled/build.gradle
@@ -1,8 +1,6 @@
-// 빌드 그레이들
-// 프로젝트의 플러그인 의존성 관리를 위한 설정
 buildscript {
-    ext { // 전역 변수를  설정
-        springBootVersion = '2.1.7.RELEASE' // 해당 의존성
+    ext {
+        springBootVersion = '2.1.9.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -16,16 +14,17 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management' //스프링 부트의 의존성을 관리해줌
+apply plugin: 'io.spring.dependency-management'
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-sourceCompatibility = '1.8'
+group 'com.jojoldu.book'
+version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
     jcenter()
 }
+
 // 지금 그레이들 버전은 compile -> implementation 으로 명령어가 변경됨.
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
